--- a/InnoLaunch/Views/Shared/_Layout.cshtml
+++ b/InnoLaunch/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Startup" asp-action="Index">Startups</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Founder" asp-action="Index">Founder</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -44,6 +50,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
+
+    <partial name="_ValidationScriptsPartial" />
+
 </body>
 </html>
